# Fuse

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/get-cmake/: action.yml
.github/actions/get-ninja/: action.yml
.github/actions/install-build-tools/: action.yml
.github/workflows/: Test.yml  TestVcpkg.yml  build.yml
cmake/modules/: CompilerWarning.cmake  FusePrintUtils.cmake  FuseStringUtils.cmake  PreventInSourceBuild.cmake
cmake/presets/: CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeWindowsPresets.json
docker/: build.sh  ubuntu-25.10.dockerfile
docs/: CMakeLists.txt
misc/vcpkg/overlay/alsa/: portfile.cmake  vcpkg.json
misc/vcpkg/overlay/dbus/: portfile.cmake  vcpkg.json
scripts/: RunClangFormat.cmake
src/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  GeometryGenerator.cpp  ImGui.cpp  ImGui.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureGenerator.cpp  TextureGenerator.h  main.cpp
src/fuse/: CMakeLists.txt  FuseConfig.cmake.in
src/fuse/include/fuse/: Application.h  Assert.h  Layer.h  LayerStack.h  Logger.h  Time.h  Timer.h
src/fuse/include/fuse/math/: Mat4.h  Vec4.h
src/fuse/src/: Application.cpp  Assert.cpp  LayerStack.cpp  Logger.cpp  Timer.cpp
src/fuse/src/math/: Angle.cpp  Mat2.cpp  Mat3.cpp  Mat4.cpp  Quaternion.cpp
src/lib/: CMakeLists.txt
src/lib/math/: Angle.cpp  Angle.h  Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  Vec2.h  Vec3.h  Vec4.h
src/testbed/: CMakeLists.txt  Camera.cpp  Camera.h  GeometryGenerator.cpp  GeometryGenerator.h  ImGui.cpp  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureGenerator.cpp  main.cpp
src/testbed/Layers/: TestLayer.cpp  TestLayer.h
tests/: CMakeLists.txt  GTestUtils.cpp  GTestUtils.h  TestAngle.cpp  TestMat2.cpp  TestMat3.cpp  TestMat4.cpp  TestQuaternion.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
